<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/WelcomeText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_weight="3"
                android:text="@string/home_welcome"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="28sp"
                tools:text="WELCOME TO TIC TAC TOE" />

            <Button
                android:id="@+id/singlePlayer"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_margin="16dp"
                android:layout_marginLeft="64dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:paddingBottom="32dp"
                android:paddingTop="32dp"
                android:text="@string/home_single_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <Button
                android:id="@+id/multiPlayer"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_margin="16dp"
                android:layout_marginLeft="64dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:paddingBottom="32dp"
                android:paddingTop="32dp"
                android:text="@string/home_multi_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="BONUS LEVEL"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_light"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                tools:text="BONUS LEVEL" />

            <Button
                android:id="@+id/singlePlayer5"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_margin="16dp"
                android:layout_marginLeft="64dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:paddingBottom="32dp"
                android:paddingTop="32dp"
                android:text="@string/home_single_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <Button
                android:id="@+id/multiPlayer5"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_margin="16dp"
                android:layout_marginLeft="64dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:paddingBottom="32dp"
                android:paddingTop="32dp"
                android:text="@string/home_multi_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
