<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">


        <ImageView
            android:id="@+id/player1Symbol"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="4dp"
            android:src="@drawable/sign_x"
            />

        <TextView
            android:id="@+id/player1ScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textColor="#228B22"
            android:textSize="65sp" />

        <TextView
            android:id="@+id/player2ScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="#228B22"
            android:textSize="65sp" />

        <ImageView
            android:id="@+id/player2Symbol"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="4dp"
            android:src="@drawable/sign_o"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/playerNameOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:gravity="left|end"
            android:paddingRight="16dp"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="#009688"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/playerNameTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:paddingRight="16dp"
            android:text=""
            android:textColor="#009688"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#FFC107"
                android:textSize="50sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#FFC107"
                android:textSize="50sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#FFC107"
                android:textSize="50sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#FFC107"
                android:textSize="50sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#FFC107"
                android:textSize="50sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#FFC107"
                android:textSize="50sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#FFC107"
                android:textSize="50sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#FFC107"
                android:textSize="50sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#FFC107"
                android:textSize="50sp" />

        </LinearLayout>

    <Button
        android:id="@+id/reset"
        style="@style/Button3x3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reset"
        android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/singlePlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#009688"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/playerNameInfo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/choose_your_symbol_and_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/background_light" />


        <RadioGroup
            android:id="@+id/symbolRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonX"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="singlePlayerRadioClicked"
                android:padding="8dp"
                android:text="@string/x"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButtonO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:checked="true"
                android:onClick="singlePlayerRadioClicked"
                android:padding="8dp"
                android:text="@string/o"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RadioGroup>

        <EditText
            android:id="@+id/singlePlayer1Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/player_2"
            android:inputType="textCapWords|textCapSentences|textPersonName"
            android:padding="8dp"
            android:text="@string/player_2"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/singlePlayerContinueBtn"
            style="@style/Button3x3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="savePlayerName"
            android:padding="8dp"
            android:text="@string/continue_Btn"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#009688"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="invisible"
        android:weightSum="0">

        <TextView
            android:id="@+id/playerNameInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_name_s"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/background_light" />

        <EditText
            android:id="@+id/player1Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/player_1"
            android:inputType="textPersonName"
            android:text="@string/player_1"
            android:textColor="@android:color/background_light" />

        <EditText
            android:id="@+id/player2Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/player_2"
            android:inputType="textPersonName"
            android:text="@string/player_2"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/playerNameBtn"
            style="@style/Button3x3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="savePlayerName"
            android:text="@string/continue_Btn"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>
